# Student-Select-Course-System-FastAPI-Mysql-

./: READEME.md  WorkFlow.md  pyproject.toml
src/app/: main.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: __init__.py  course.py  student.py  student_course.py
src/app/core/: config.py
src/app/crud/: __init__.py  category.py  course.py  knowledge.py  student.py  student_course.py
src/app/models/: __init__.py  course.py  student.py  student_course.py
src/app/schemas/: __init__.py  course.py  student.py  student_course.py
